microservice/mysql-st.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
spec:
  selector:
    app: wordpress
    component: mysql
  ports:
  - port: 3306
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
    component: mysql
spec:
  selector:
    matchLabels:
      app: wordpress
      component: mysql
  serviceName: wordpress-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        component: mysql
    spec:
      containers:
      - name: wordpress-mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: db
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
