microservice/wordpress-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  selector:
    app: wordpress
    component: frontend
  ports:
  - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
    component: frontend
spec:
  selector:
    matchLabels:
      app: wordpress
      component: frontend
  template:
    metadata:
      labels:
        app: wordpress
        component: frontend
    spec:
      volumes:
        - name: wordpress-vol
          persistentVolumeClaim:
            claimName: wordpress-pvc
      containers:
      - name: wordpress
        image: wordpress:4.8-apache
        resources: {}
        ports:
        - containerPort: 80
        volumeMounts:
          - name: wordpress-vol
            mountPath: /var/www/html
