microservice/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wordpress-gateway
  namespace: wordpress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - wordpress.home.local
    - ya.home.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: wordpress-route
  namespace: wordpress
spec:
  hosts:
  - "*"
  gateways:
  - wordpress-gateway
  http:
  - match:
      - uri:
          prefix: /
    route:
    - destination:
        host: wordpress
        port:
          number: 80


---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sql-route
  namespace: wordpress
spec:
  hosts:
  - "*"
  gateways:
  - wordpress-gateway
  http:
  - match:
      - port: 3306
    route:
    - destination:
        host: wordpress-mysql
        port:
          number: 3306
